--- a/app/views/editUser.ejs
+++ b/app/views/editUser.ejs
@@ -21,7 +21,7 @@
         <section class="product-box">
             <div class="editarCampo">
                 <div>
-                <label>Nombre de Usuario:</label>
+                <label>Nombre:</label>
                 <input type="text" name="nombre" value="<%= elUser.nombre %>" >
                 </div>
                 <div>
@@ -29,36 +29,47 @@
                 <input type="text" name="apellido" value="<%= elUser.apellido %>">
                 </div>
                 <div>
+                <label>N° de Documento:</label>
+                <input type="text" name="numeroDoc" value="<%= elUser.numeroDoc%>">
+                </div>
+                <div>
                 <label>Email:</label>
                 <input type="text" name="email" value="<%= elUser.email %>">
                 </div>
-
                 <div>
+                <label>Teléfono:</label>
+                <input type="text" name="telefono" value="<%= elUser.telefono%>">
+                </div>
+                <div>
+                <label>Teléfono alternativo:</label>
+                <input type="text" name="telefono2" value="<%= elUser.telefono2%>">
+                </div>
+
+                <div class="imagenActualUsuario">
                 <label>Imagen Actual:</label>
                 <img src="/images/users/<%= elUser.image %>">
-                
+                </div>
 
-                <div class="form-group col"> <label for="imageUpload" class="btn btn-primary btn-block btn-outlined">Cargá tu nueva imagen</label>
-                    <input type="file" id="imageUpload" accept="image/*" style="display: none">
+                <div class="form-group col"> <label for="imageUpload" class="btn btn-outline-primary">Cargá tu nueva imagen</label>
+                 <input type="file" id="imageUpload" accept="image/*" style="display: none">
                 </div>
-                </div>
+                
 
             </div>
         </section>
-        
-        <button type="submit">Guardar Usuario</button>
+
+        <div class="form-group col"> <button type="submit" class="btn btn-success">Guardar Usuario</button>
+        </div>
+     
                 
     </form> 
     
     <form  action="/users/<%= elUser.id %>?_method=DELETE" method="POST" >
-   <!-- <button type="submit">Borrar Usuario</button> -->
-   <div class="form-group col"> <label for="imageUpload" class="btn btn-primary btn-block btn-outlined">Borrar Usuario</label>
+    <div class="form-group col"> <button type="DELETE" class="btn btn-danger">Borrar Usuario </button>  
     </div>
    </form>
             
-            
-
-    <!-- pie -->
+ <!-- pie -->
 <%- include('../partials/footer'); %>
 
 </body>
