--- a/app/views/userForm.ejs
+++ b/app/views/userForm.ejs
@@ -29,7 +29,7 @@
          
           
             <p> <label for="imageUpload" class="btn btn-primary btn-block btn-outlined">Cargá tu Foto</label>
-              <input type="file" id="imageUpload" accept="image/*" style="display: none"> </p>
+              <input type="file" id="imageUpload" accept="images/*" name="image" style="display: none"> </p>
             <p><select id="inputState" class="form-control">
               <option selected>Tipo de Documento</option>
               <option>DNI</option>
