Subo login back

--- a/app/views/register.ejs
+++ b/app/views/register.ejs
@@ -8,7 +8,7 @@
     
     <%- include('../partials/nav'); %> 
    
-      
+      <form action="/users/login" method="GET">
     <div class="row">
       <div class="col-12">
       <div class="tituloSaludo">
@@ -22,12 +22,14 @@
     </div>
     </div>
     <div class="col-12">
-        <a class="crearCta" href="/index" type="submit" value="Ingresá">
-          <input class="ingreso" type="submit" value="Ingresá">
-       </a>
+        
+              <!-- <a class="crearCta" href="/index" type="submit" value="Ingresá"> -->
+                <button class="ingreso" type="submit" > Ingresá </button>
+                <!-- </a> -->
+       
       </div>
     </div>
-    
+      </form>
     <div class="row">
       <div class="col-12">
         <div class="crearCta">
