--- a/app/views/register.ejs
+++ b/app/views/register.ejs
@@ -8,7 +8,7 @@
     
     <%- include('../partials/nav'); %> 
    
-      <form action="/users/login" method="GET">
+      <form action="/users/login" method="POST">
     <div class="row">
       <div class="col-12">
       <div class="tituloSaludo">
@@ -18,7 +18,7 @@
     <div class="col-12">
       <div class = "elImput">
       <input class="unInput" type="text" name="email" size="40" placeholder="Correo Electronico">
-      <input class="unInput" type="password" name="password" size="40" placeholder="Contraseña">
+      <input class="unInput" type="password" name="contrasena" size="40" placeholder="Contraseña">
     </div>
     </div>
     <div class="col-12">
