User Login encriptado

--- a/app/views/register.ejs
+++ b/app/views/register.ejs
@@ -12,7 +12,7 @@
     <div class="row">
       <div class="col-12">
       <div class="tituloSaludo">
-      <h2>Hola :)</h2>
+      <h2> <%= msg %></h2>
     </div>
     </div>
     <div class="col-12">
