--- a/app/partials/nav.ejs
+++ b/app/partials/nav.ejs
@@ -19,8 +19,8 @@
       <nav class="right-navbar">
         <ul>
             <li><a href="/">Inicio</a></li>
-            <li><a href="/register" target="blank">Ingresá</a></li>
-            <li><a href="/register" target="blank">Registrate</a></li>
+            <li><a href="/users/register" target="blank">Ingresá</a></li>
+            <li><a href="/users/create" target="blank">Registrate</a></li>
             <li><a href="/productCart" target="blank"> <img src="/images/carrito16px.png"></a></li>
         </ul>
       </nav>
