--- a/app/views/editUser.ejs
+++ b/app/views/editUser.ejs
@@ -21,33 +21,83 @@
         <section class="product-box">
             <div class="editarCampo">
                 <div>
-                <label>Nombre:</label>
-                <input type="text" name="nombre" value="<%= elUser.nombre %>" >
+                  <label>Nombre:</label>
+                  <input type="text" name="nombre" value="<%= elUser.nombre %>" >
                 </div>
                 <div>
-                <label>Apellido:</label>
-                <input type="text" name="apellido" value="<%= elUser.apellido %>">
+                  <label>Apellido:</label>
+                  <input type="text" name="apellido" value="<%= elUser.apellido %>">
                 </div>
                 <div>
-                <label>N° de Documento:</label>
-                <input type="text" name="numeroDoc" value="<%= elUser.numeroDoc%>">
+                  <label>Genéro:</label>
+                  <input type="text" name="genero" value="<%= elUser.genero%>">
                 </div>
                 <div>
-                <label>Email:</label>
-                <input type="text" name="email" value="<%= elUser.email %>">
+                  <br>
+                  <p><select id="inputState" class="form-control">
+                    <option selected>Tipo de Documento</option>
+                    <option>DNI</option>
+                    <option>Libreta</option>
+                    <option>Pasaporte</option>
+                  </select></p>
+                  <label>N° de Documento:</label>
+                  <input type="text" name="numeroDoc" value="<%= elUser.numeroDoc%>">
                 </div>
                 <div>
-                <label>Teléfono:</label>
-                <input type="text" name="telefono" value="<%= elUser.telefono%>">
+                  <label>Email:</label>
+                  <input type="text" name="email" value="<%= elUser.email %>">
                 </div>
                 <div>
-                <label>Teléfono alternativo:</label>
-                <input type="text" name="telefono2" value="<%= elUser.telefono2%>">
+                  <label>Teléfono:</label>
+                  <input type="text" name="telefono" value="<%= elUser.telefono%>">
+                </div>
+                <div>
+                  <label>Teléfono alternativo:</label>
+                  <input type="text" name="telefono2" value="<%= elUser.telefono2%>">
+                </div>
+                <div>
+                  <br>
+                  <h5>Domicilio</h5>
+                  <label>Calle y Número </label>
+                  <input type="text" name="calle" value="<%= elUser.calle%>">
+                </div>
+
+                <div>
+                  <label>Ciudad</label>
+                  <input type="text" name="city" value="<%= elUser.city%>">
+                </div>
+
+                <div>
+                  <label>CP</label>
+                  <input type="text" name="cp" value="<%= elUser.cp%>">
+                </div>
+
+                <div>
+                  <label>Provincia</label>
+                  <input type="text" name="provincia" value="<%= elUser.provincia%>">
+                </div>
+
+                <div>
+                  <br>
+                  <h5>Datos de ingreso</h5>
+                  <label>Usuario</label>
+                  <input type="text" name="nombreUsuario" value="<%= elUser.nombreUsuario%>">
+
+                  <label>Contraseña</label>
+                  <input type="password" name="contrasena" value="<%= elUser.contrasena%>">
+                </div>
+
+
+                <div>
+                  <br>
+                  <h5>Datos de Vendedor</h5>
+                  <label>Usuario</label>
+                  <input type="text" name="nomVendedor" value="<%= elUser.nomVendedor%>">
                 </div>
 
                 <div class="imagenActualUsuario">
-                <label>Imagen Actual:</label>
-                <img src="/images/users/<%= elUser.image %>">
+                  <label>Imagen Actual:</label>
+                  <img src="/images/users/<%= elUser.image %>">
                 </div>
 
                 <div class="form-group col"> <label for="imageUpload" class="btn btn-outline-primary">Cargá tu nueva imagen</label>
