--- a/app/public/stylesheets/register.css
+++ b/app/public/stylesheets/register.css
@@ -25,6 +25,7 @@
     display: inline-block;
     text-decoration: none;
   }
+
   
   .container-header {
     max-width: 1140px;
@@ -145,13 +146,13 @@ header {
 
 a {
     color:blue;
-    margin-right: 30px;
+    /*margin-right: 30px;*/
 }
 
 body {
     font-family: 'Montserrat', sans-serif;
     padding: 1%;
-    background-color: rgba(237, 241, 254, 0.5);
+    background-color: rgba(237, 241, 254, 1);
 }
    }
 
@@ -161,7 +162,7 @@ h2 {
 }
 
 p {
-    margin-left: 2%;
+    margin-left: 4%;
     margin-top: 2%;
 }
 
