--- a/app/views/users.ejs
+++ b/app/views/users.ejs
@@ -4,7 +4,7 @@
     <%- include('../partials/head'); %> 
  
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
-    
+    <link rel='stylesheet' href='/stylesheets/styleProductDetail.css' />
   </head>
   
   <body>
