Fix error en ProductEdit y Fix menores en CreateProduct

--- a/app/views/productAdd.ejs
+++ b/app/views/productAdd.ejs
@@ -69,17 +69,15 @@
           
           <div class="form-group col">
             <label for="validationTextarea">Descripción del Producto</label>
-            <textarea class="form-control is-invalid" id="validationTextarea" name="description" placeholder="Por favor, ingresá una descripción" required></textarea>
-            <div class="invalid-feedback">
-             Es necesaria una descripción
-            </div>
+            <textarea class="form-control" id="validationTextarea" name="description" placeholder="Por favor, ingresá una descripción" required></textarea>
+            
           </div>
         </div>
         <div class="row">
           <div class="col-12">
             <p class="tituloDetalle"> IMAGENES </p>
             <label>Imagen del Producto:</label>
-      <input type="file" name="image">
+      <input type="file" name="image" required>
           </div>
         </div>
 
