--- a/app/views/register.ejs
+++ b/app/views/register.ejs
@@ -20,7 +20,12 @@
       <div class = "elImput">
       <input class="unInput" type="text" name="email" size="40" placeholder="Correo Electronico" required>
       <input class="unInput" type="password" name="contrasena" size="40" placeholder="Contraseña" required>
+      
     </div>
+   
+      <input class="unInput" type="checkbox" name="recordar" size="40" >
+         <label>Mantener sesión abierta</label>
+    
     </div>
     <div class="col-12">
         
