fix menor vista

--- a/app/views/userProfile.ejs
+++ b/app/views/userProfile.ejs
@@ -15,12 +15,8 @@
      
     <div class="col-12 col-sm-6 col-lg-8"> <p class="tituloProducto"><%= user.nombre %> <%= user.apellido %></p></div>
     <div class="col-6 col-lg-4"> 
-        <span class="fa fa-star checked"></span>
-        <span class="fa fa-star checked"></span>
-        <span class="fa fa-star checked"></span>
-        <span class="fa fa-star checked"></span>
-        <span class="fa fa-star"></span>
-        <a href="#" target="blank">Ver referencias de usuario</a>
+ 
+        <a href="#" target="blank">Editar mis perfil</a>
 
     </div>
   </div>
