Minor changes in usrProf view

--- a/app/views/userProfile.ejs
+++ b/app/views/userProfile.ejs
@@ -16,7 +16,7 @@
     <div class="col-12 col-sm-6 col-lg-8"> <p class="tituloProducto"><%= user.nombre %> <%= user.apellido %></p></div>
     <div class="col-6 col-lg-4"> 
  
-        <a href="#" target="blank">Editar mis perfil</a>
+        <a href="/users/<%= user.id %>/edit" target="blank">Editar mi perfil</a>
 
     </div>
   </div>
