Fix nav no mostraba botones usuario

--- a/app/views/userProfile.ejs
+++ b/app/views/userProfile.ejs
@@ -13,7 +13,7 @@
 <div class="container">
   <div class="row">
      
-    <div class="col-12 col-sm-6 col-lg-8"> <p class="tituloProducto"><%= user.nombre %> <%= user.apellido %></p></div>
+    <div class="col-12 col-sm-6 col-lg-8"> <p class="tituloProducto"><%= title2 %></p></div>
     <div class="col-6 col-lg-4"> 
  
         <a href="/users/<%= user.id %>/edit" target="blank">Editar mi perfil</a>
