ajustes  DER + userRegister (mejora) y scripts

--- a/app/views/userForm.ejs
+++ b/app/views/userForm.ejs
@@ -32,6 +32,7 @@
             <option selected>Genero</option>
             <option>Hombre</option>
             <option>Mujer</option>
+            <option>Prefiero no decirlo</option>
           </select></p>
          
           
@@ -50,18 +51,17 @@
         </div>
 
         <div class="tab">Datos de Usuario:
-          <p><input placeholder="Nombre de Usuario..." name="nombreUsuario" oninput="this.className = ''"></p>
+          <p><input placeholder="E-mail..." name="email" oninput="this.className = ''"></p>
           <p><input type="password" placeholder="Contraseña..." name="contrasena" oninput="this.className = ''"></p>
         </div>
         
         <div class="tab">Datos de Contacto:
-          <p><input placeholder="E-mail..." name="email" oninput="this.className = ''"></p>
-          <p> <input type="tel" name="telefono" name="tel1" placeholder="Telefono1..."></p>
-          <p><input type="tel" name="telefono2" name="tel2" placeholder="Telefono2..."></p>
+          
+          <p> <input type="tel" name="telefono" name="tel1" placeholder="Telefono..."></p>
           <p><input type="text" name="calle" placeholder="Calle y número..."></p>
-       <p> <input type="text" name="city" placeholder="Ciudad..."></p>
-        <p><input type="text" name="cp" placeholder="Código Postal"></p>
-        <p><input type="text" name="provincia" placeholder="Provincia..."></p>
+          <p> <input type="text" name="city" placeholder="Ciudad..."></p>
+          <p><input type="text" name="cp" placeholder="Código Postal"></p>
+          <p><input type="text" name="provincia" placeholder="Provincia..."></p>
         </div>
         
         <div class="tab">Perfil de Vendedor:
