--- a/app/views/products.ejs
+++ b/app/views/products.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <%- include('../partials/head'); %> 
+  <%- include('../partials/head'); %> 
  
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
     <link rel="stylesheet" href="/stylesheets/products.css">
@@ -17,15 +17,15 @@
 <div class="container products-wrapper">
     <div class="row">
         <div class="col-12">
-            <h2 class="products-title"><%= title2 %></h2>
+        <h2 class="products-title"><%= title2 %></h2>
         </div>
-        <% prods.forEach( prd => { %>
+        <% products.forEach     ( prd => { %>
         <div class="col-xl-4 col-lg-4 col-12 col-sm-6 col-lg-3">
             
             <section class="product-box">
                 <a href="/products/<%= prd.id %>">
                     <figure class="product-box_image">
-                        <img src="/images/products/<%= prd.image %>" alt="imagen de producto">
+                        <img src="/images/products/<%= prd.imageName%>" alt="imagen de producto">
                     </figure>
                     <article class="product-box_data">
                         <h4><%= prd.prodName %> </h4>
