--- a/app/views/users.ejs
+++ b/app/views/users.ejs
@@ -17,18 +17,18 @@
         <div class="col-12">
             <h2 class="products-title">Todos los Usuarios</h2>
         </div>
-        <% users.forEach( usr => { %>
+        <% masterusers.forEach( usr => { %>
         <div class="col-xl-3 col-12 col-sm-6 col-lg-3">
             
             <section class="product-box">
                 <!-- <a href="/products/detail/<%= usr.image %>"> -->
                     <a href="/users/<%= usr.id %>">
                     <figure class="product-box_image">
-                        <img src="/images/users/<%= usr.image %>" alt="imagen de usuario">
+                        <img src="/images/users/<%= usr.avatarName %>" alt="imagen de usuario">
                     </figure>
                     <article class="product-box_data">
-                        <h2><%= usr.nombre %> </h2>
-                        <span><%= usr.apellido %></span>
+                        <h2><%= usr.name %> </h2>
+                        <span><%= usr.surname %></span>
                         <p><%= usr.email %></p>
                         <!-- <i class="fas fa-truck"></i> -->
                     </article>
