--- a/app/views/productDetailOk.ejs
+++ b/app/views/productDetailOk.ejs
@@ -13,7 +13,7 @@
  <!---breadrcum-->
 
   <ul class="breadcrum"> 
-    <li><a href="#"><%= product.categories.categoryName  %></a></li> 
+    <li><a href="/"><%= product.categories.categoryName  %></a></li> 
     <li> Detalle de producto </li> 
   </ul>
 
