--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -17,14 +17,14 @@
   <div class="col-xl-4 col-lg-6 col-md-6 col-sm-6 col-12">
     <div class="cont">
     <h6>ARDUINO</h6>
-    <a href="/products/category/Arduino" class="call-to-action"><img src="/images/Arduino.JPG"> </a>
+    <a href="/products/category/1" class="call-to-action"><img src="/images/Arduino.JPG"> </a>
   </div>
  
     </div>
 <div class="col-xl-4  col-lg-6 col-md-6 col-sm-6 col-12"> 
   <div class="cont">
     <h6>RASPBERRRY</h6>    
-        <a href="/products/category/Raspberry" class="call-to-action"><img src="/images/raspberrycat.jpg"></a>
+        <a href="/products/category/2" class="call-to-action"><img src="/images/raspberrycat.jpg"></a>
   </div>
 
      </div>
@@ -32,13 +32,13 @@
      <div class="col-xl-4  col-lg-12 col-md-5 col-sm-6 col-12">
       <div class="cont">
   <h6>PLCs</h6>
-  <a href="/products/category/PLC" class="call-to-action"><img src="/images/PLC_home.jpg"></a>
+  <a href="/products/category/3" class="call-to-action"><img src="/images/PLC_home.jpg"></a>
       </div>
      </div>
      <div class="col-xl-12  col-lg-12 col-md-12 col-sm-6 col-12">
       <div class="cont">
   <h6>COMBOS Y OFERTAS </h6>
-  <a href="/products/category/Combos y Ofertas" class="call-to-action"><img class="combos"src="/images/Combos.jpg" alt="Combos y Ofertas"> </a>
+  <a href="/products/category/4" class="call-to-action"><img class="combos"src="/images/Combos.jpg" alt="Combos y Ofertas"> </a>
       </div>
 
      </div>
