ajustes edición y creación de productos y usuarios

--- a/app/views/editProduct.ejs
+++ b/app/views/editProduct.ejs
@@ -74,7 +74,7 @@
             <br>
             <div>
                 <label>Cambiar imagen</label>
-                <input type="file" name="image" class="btn btn-outline-primary">
+                <input type="file" name="imageName" class="btn btn-outline-primary">
             </div>
 
         
