--- a/app/views/productAdd.ejs
+++ b/app/views/productAdd.ejs
@@ -24,22 +24,21 @@
       </div>
     </div>
   
+    <br>
 
-  
     <div class="row">
       <div class="col-3">
         <p> Categoría</p>
       </div>
-        
-        <div class="form-group col-9">
-        <select id="inputState" class="form-control" name="categoria">
-          <option selected>Elegir Categoría</option>
-          <option>Arduino</option>
-          <option>Raspberry</option>
-          <option>PLC</option>
-          <option>Combos y Ofertas</option>
+      <div class="form-group col-9">
+        <select name="idCategory">
+          <option value="">Elegí una Categoría</option>
+          <% categories.forEach(category => { %>
+          <option value="<%= category.id %>"><%= category.categoryName %></option>
+          <% }) %>
         </select>
-    </div>
+
+      </div>
    
     </div>
   
@@ -54,11 +53,11 @@
       <div class="row">
         <div class="form-group col">
           <label for="inputModelo">Modelo</label>
-          <input type="text" class="form-control" id="inputModelo" name="modelo">
+          <input type="text" class="form-control" id="inputModelo" name="model">
         </div>
         <div class="form-group col">
           <label for="inputVoltaje">Voltaje</label>
-          <input type="text" class="form-control" id="inputVoltaje" name="voltaje">
+          <input type="text" class="form-control" id="inputVoltaje" name="voltage">
         </div>
       </div>
           
@@ -78,7 +77,7 @@
           <div class="col-12">
             <p class="tituloDetalle"> IMAGENES </p>
             <label>Imagen del Producto:</label>
-      <input type="file" name="image" required>
+      <input type="file" name="imageName" required>
           </div>
         </div>
 
