--- a/app/views/userForm.ejs
+++ b/app/views/userForm.ejs
@@ -26,9 +26,9 @@
           </ul>
 
         <div class="tab">Sobre vos:
-          <p><input placeholder="Nombre..." name="nombre" oninput="this.className = ''"></p>
-          <p><input placeholder="Apellido..." name="apellido" oninput="this.className = ''"></p>
-          <p><select id="inputState" name="genero" class="form-control">
+          <p><input placeholder="Nombre..." name="name oninput="this.className = ''"></p>
+          <p><input placeholder="Apellido..." name="surname" oninput="this.className = ''"></p>
+          <p><select id="inputState" name="gender" class="form-control">
             <option selected>Genero</option>
             <option>Hombre</option>
             <option>Mujer</option>
@@ -36,38 +36,39 @@
           </select></p>
          
           
-            <p> <label for="imageUpload" class="btn btn-primary btn-block btn-outlined">Cargá tu Foto</label>
-              <input type="file" id="imageUpload" accept="images/*" name="image" style="display: none"> </p>
+            <p> <label for="avatarName" class="btn btn-primary btn-block btn-outlined">Cargá tu Foto</label>
+              <input type="file" id="avatarName" accept="images/*" name="avatarName" style="display: none"> </p>
+            <label>Tipo de Documento</label>
             <p><select id="inputState" class="form-control">
-              <option selected>Tipo de Documento</option>
+              <option value=""></option>
               <option>DNI</option>
               <option>Libreta</option>
               <option>Pasaporte</option>
             </select></p>
             
             <p>
-              <input type="text" class="form-control" id="inputModelo" placeholder="Número de documento..." name="numeroDoc"></p>
+              <input type="text" class="form-control" id="inputModelo" placeholder="Número de documento..." name="document"></p>
 
         </div>
 
         <div class="tab">Datos de Usuario:
           <p><input placeholder="E-mail..." name="email" oninput="this.className = ''"></p>
-          <p><input type="password" placeholder="Contraseña..." name="contrasena" oninput="this.className = ''"></p>
+          <p><input type="password" placeholder="Contraseña..." name="password" oninput="this.className = ''"></p>
         </div>
         
         <div class="tab">Datos de Contacto:
           
-          <p> <input type="tel" name="telefono" name="tel1" placeholder="Telefono..."></p>
-          <p><input type="text" name="calle" placeholder="Calle y número..."></p>
+          <p> <input type="tel" name="telefono" name="telephone" placeholder="Telefono..."></p>
+          <p><input type="text" name="street" placeholder="Calle y número..."></p>
           <p> <input type="text" name="city" placeholder="Ciudad..."></p>
-          <p><input type="text" name="cp" placeholder="Código Postal"></p>
-          <p><input type="text" name="provincia" placeholder="Provincia..."></p>
+          <p><input type="text" name="CP" placeholder="Código Postal"></p>
+          <p><input type="text" name="province" placeholder="Provincia..."></p>
         </div>
         
         <div class="tab">Perfil de Vendedor:
-          <p><input type="text" name="nomVendedor" placeholder="Nombre Fantasia/Apodo"></p>
+          <!--<p><input type="text" name="nomVendedor" placeholder="Nombre Fantasia/Apodo"></p>
          <p><input type="checkbox" id="utilizarApodo"  value="first_checkbox">Utilizar mi nombre y apellido como nombre fantasia/apodo</p>
-       <p><input type="checkbox" id="esVendedor" value="first_checkbox"><b>No quiero activar ahora mi perfil de vendedor</b></p> 
+       <p><input type="checkbox" id="esVendedor" value="first_checkbox"><b>No quiero activar ahora mi perfil de vendedor</b></p> -->
       <p><input type="checkbox" id="aceptaTerminos" value="first_checkbox">Al registrarme acepto los <a>terminos y condiciones y la Politica de Privacidad de SLC Componentes Electronicos SA</a></p>
         </div>
         
