--- a/app/views/userProfile.ejs
+++ b/app/views/userProfile.ejs
@@ -16,7 +16,7 @@
     <div class="col-12 col-sm-6 col-lg-8"> <p class="tituloProducto"><%= title2 %></p></div>
     <div class="col-6 col-lg-4"> 
  
-        <a href="/users/<%= user.id %>/edit" target="blank">Editar mi perfil</a>
+        <a href="/users/<%= masterusers.id %>/edit" target="blank">Editar mi perfil</a>
 
     </div>
   </div>
@@ -24,13 +24,14 @@
 
 <div class="container">
     <div class="row">
-      <div class="col-6 col-lg-4"> <img src="/images/users/<%= user.image %>"> </div>
+      <div class="col-6 col-lg-4"> <img src="/images/users/<%= masterusers.avatarName %>"> </div>
       <div class="col-12 col-sm-6 col-lg-8"> 
        <p class="tituloDetalle">Detalles de usuario</p> 
        <ul class="caracteristicasProductos">
-       <div>Nombre: <%= user.nombre %> </div>   
-       <div>Apellido:  <%= user.apellido %> </div> 
-       <div>Email: <%= user.email %></div>
+       <div>Nombre: <%= masterusers.name %> </div>   
+       <div>Apellido:  <%= masterusers.surname %> </div> 
+       <div>Email: <%= masterusers.email %></div>
+       <div>Ciudad: <%= masterusers.city %></div>
       </ul>
     
       </p>
