--- a/app/views/userForm.ejs
+++ b/app/views/userForm.ejs
@@ -39,7 +39,7 @@
             <p> <label for="avatarName" class="btn btn-primary btn-block btn-outlined">Cargá tu Foto</label>
               <input type="file" id="avatarName" accept="images/*" name="avatarName" style="display: none"> </p>
             <label>Tipo de Documento</label>
-            <p><select id="inputState" class="form-control">
+            <p><select id="inputState" name="typeDocument" class="form-control">
               <option value=""></option>
               <option>DNI</option>
               <option>Libreta</option>
